--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -16,3 +16,5 @@ jobs:
       run: pub get
     - name: Run tests
       run: pub run test
+      env:
+        APP_ID: ${{ secrets.OPENWEATHER_APP_ID }}
